--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 15:00+0200\n"
+"PO-Revision-Date: 2010-05-29 15:01+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -7011,7 +7011,7 @@ msgstr "Ime področja HTTP Basic Auth, ki se prikaže med HTTP Auth"
 
 #: setup/lib/messages.inc.php:249
 msgid "HTTP Realm"
-msgstr "Sfera HTTP"
+msgstr "Področje HTTP"
 
 #: setup/lib/messages.inc.php:250
 msgid ""
