--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 15:02+0200\n"
+"PO-Revision-Date: 2010-05-29 15:03+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -7030,7 +7030,7 @@ msgstr "Način overovitve za uporabo"
 
 #: setup/lib/messages.inc.php:253
 msgid "Authentication type"
-msgstr ""
+msgstr "Vrsta overovitve"
 
 #: setup/lib/messages.inc.php:254
 msgid ""
