--- a/po/sl.po
+++ b/po/sl.po
@@ -7037,6 +7037,9 @@ msgid ""
 "Leave blank for no [a@http://wiki.phpmyadmin.net/pma/bookmark]bookmark[/a] "
 "support, suggested: [kbd]pma_bookmark[/kbd]"
 msgstr ""
+"Pustite prazno, če ne želite podpore "
+"[a@http://wiki.phpmyadmin.net/pma/bookmark]zaznamkov[/a]; priporočeno: "
+"[kbd]pma_bookmark[/kbd]"
 
 #: setup/lib/messages.inc.php:255
 msgid "Bookmark table"
