--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 15:03+0200\n"
+"PO-Revision-Date: 2010-05-29 15:04+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -7038,7 +7038,7 @@ msgid ""
 "support, suggested: [kbd]pma_bookmark[/kbd]"
 msgstr ""
 "Pustite prazno, če ne želite podpore "
-"[a@http://wiki.phpmyadmin.net/pma/bookmark]zaznamkov[/a]; priporočeno: "
+"[a@http://wiki.phpmyadmin.net/pma/bookmark]zaznamkov[/a]; predlagano: "
 "[kbd]pma_bookmark[/kbd]"
 
 #: setup/lib/messages.inc.php:255
