Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -7050,6 +7050,8 @@ msgid ""
 "Leave blank for no column comments/mime types, suggested: [kbd]"
 "pma_column_info[/kbd]"
 msgstr ""
+"Pustite prazno, če ne želite komentarjev/vrst mime stolpcev; predlagano: "
+"[kbd]pma_column_info[/kbd]"
 
 #: setup/lib/messages.inc.php:257
 msgid "Column information table"
