--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 15:04+0200\n"
+"PO-Revision-Date: 2010-05-29 15:06+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -7019,6 +7019,9 @@ msgid ""
 "authentication[/a] (not located in your document root; suggested: /etc/"
 "swekey.conf)"
 msgstr ""
+"Pot konfiguracijske datoteke za [a@http://swekey.com]strojno overovitev "
+"SweKey[/a] (se ne nahaja v korenski mapi dokumentov; predlagano: "
+"/etc/swekey.conf)"
 
 #: setup/lib/messages.inc.php:251
 msgid "SweKey config file"
