--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 15:06+0200\n"
+"PO-Revision-Date: 2010-05-29 15:07+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -7306,6 +7306,8 @@ msgstr "Samodejno ustvari različice"
 #: setup/lib/messages.inc.php:305
 msgid "Defines the list of statements the auto-creation uses for new versions."
 msgstr ""
+"Določi seznam stavkov, ki jih samodejno ustvarjanje uporabi za nove "
+"različice."
 
 #: setup/lib/messages.inc.php:306
 msgid "Statements to track"
