Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 15:13+0200\n"
+"PO-Revision-Date: 2010-05-29 15:15+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -7589,6 +7589,9 @@ msgid ""
 "libraries/import.lib.php for defaults on how many queries a statement may "
 "contain."
 msgstr ""
+"Prikaže spremenjene vrstice vsakega stavka v večstavčni poizvedbi. Oglejte "
+"si libraries/import.lib.php za privzete podatke o tem, koliko poizvedb lahko "
+"stavek vsebuje."
 
 #: setup/lib/messages.inc.php:367
 msgid "Verbose multiple statements"
