--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 15:15+0200\n"
+"PO-Revision-Date: 2010-05-29 15:22+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -6972,6 +6972,12 @@ msgid ""
 "phpMyAdmin panel. Set [a@?page=servers&amp;mode=edit&amp;id=%1$d#tab_Server]"
 "authentication type[/a] to [kbd]cookie[/kbd] or [kbd]http[/kbd]."
 msgstr ""
+"Nastavili ste vrsto overovitve [kbd]config[/kbd] in vključili uporabniško "
+"ime in geslo za samodejno prijavo, kar ni zaželena možnost za gostitelje "
+"aktivnih strani. Vsakdo, ki ve ali ugane vaš URL phpMyAdmina, lahko "
+"neposredno dostopa do vaše plošče phpMyAdmin. Nastavite "
+"[a@?page=servers&amp;mode=edit&amp;id=%1$d#tab_Server]vrsto overovitve[/a] "
+"na [kbd]cookie[/kbd] ali [kbd]http[/kbd]."
 
 #: setup/lib/messages.inc.php:239
 msgid "You should use mysqli for performance reasons"
