--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 15:22+0200\n"
+"PO-Revision-Date: 2010-05-29 15:23+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -6377,7 +6377,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:98
 msgid "A dropdown will be used if fewer items are present"
-msgstr ""
+msgstr "Uporabljen bo spustni seznam, če je prisotnih manj elementov"
 
 #: setup/lib/messages.inc.php:99
 msgid "Foreign key limit"
