Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 15:23+0200\n"
+"PO-Revision-Date: 2010-05-29 15:24+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -6370,6 +6370,8 @@ msgid ""
 "Sort order for items in a foreign-key dropdown box; [kbd]content[/kbd] is "
 "the referenced data, [kbd]id[/kbd] is the key value"
 msgstr ""
+"Vrstni red za predmete na spustnem seznamu tujih ključev; [kbd]content[/kbd] "
+"je sklicevan podatek, [kbd]id[/kbd] je vrednost ključa"
 
 #: setup/lib/messages.inc.php:97
 msgid "Foreign key dropdown order"
