--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 15:27+0200\n"
+"PO-Revision-Date: 2010-05-29 15:29+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -4630,10 +4630,10 @@ msgstr ""
 "Prikaže polje TIME, TIMESTAMP, DATETIME ali številski časovni žig unix kot "
 "oblikovan datum. Prva možnost je odmik (v urah), ki bo dodan časovnemu žigu "
 "(privzeto: 0). Uporabite drugo možnost za določitev različnega niza oblike "
-"datuma/časa. Tretja možnost določa, ali želite videti lokalni datum ali UTF "
-"(uporabite niza \"local\" ali \"utf\"). V skladu s tem ima oblika datuma "
+"datuma/časa. Tretja možnost določa, ali želite videti lokalni datum ali UTC "
+"(uporabite niza \"local\" ali \"utc\"). V skladu s tem ima oblika datuma "
 "različne vrednosti – za \"local\" si oglejte dokumentacijo za PHP-jevo "
-"funkcijo strftime() in za \"utf\" se uporablja funkcija gmdate()."
+"funkcijo strftime() in za \"utc\" se uporablja funkcija gmdate()."
 
 #: libraries/transformations/text_plain__external.inc.php:10
 msgid ""
