Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 15:29+0200\n"
+"PO-Revision-Date: 2010-05-29 15:31+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -4654,10 +4654,9 @@ msgstr ""
 "datoteko libraries/transformations/text_plain__external.inc.php in vstaviti "
 "orodja za zaganjanje. Prva možnost je številka programa, ki ga želite "
 "uporabiti, druga možnost pa so parametri za program. Če tretji parameter "
-"nastavite na 1, bo s pomočjo htmlspecialchars() pretvoril izhod (Privzeto: "
-"1). Če nastavite četrti parameter na 1, bo v celico z vsebino (content cell) "
-"vnesel NOWRAP in tako prikazal celoten izhod brez preoblikovanja (Privzeto: "
-"1)."
+"nastavite na 1, bo s pomočjo htmlspecialchars() pretvoril izhod (Privzeto "
+"1). Če nastavite četrti parameter na 1, bi preprečil prelamljanje in "
+"zagotovil, da se celotni izhod prikaže v eni vrstici (Privzeto 1)."
 
 #: libraries/transformations/text_plain__formatted.inc.php:10
 msgid ""
