Translation update done using Pootle.

--- a/po/nl.po
+++ b/po/nl.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-03-26 15:46+0200\n"
-"Last-Translator:  <rink@initfour.nl>\n"
+"PO-Revision-Date: 2010-05-31 00:24+0200\n"
+"Last-Translator: Bjorn <inbox@bjornroesbeke.be>\n"
 "Language-Team: dutch <nl@li.org>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
@@ -298,11 +298,10 @@ msgid "Damaged"
 msgstr "Beschadigd"
 
 #: db_operations.php:562
-#, fuzzy
 #| msgid "Repair"
 msgctxt "BLOB repository"
 msgid "Repair"
-msgstr "Repareer"
+msgstr "Herstel"
 
 #: db_operations.php:570
 #, fuzzy
@@ -8560,344 +8559,3 @@ msgstr "Tabel hernoemen naar"
 
 #~ msgid "See image/jpeg: inline"
 #~ msgstr "Zie image/jpeg: inline"
-
-#, fuzzy
-#~| msgid "\"zipped\""
-#~ msgid "zipped"
-#~ msgstr "\"Gezipt\""
-
-#, fuzzy
-#~| msgid "\"gzipped\""
-#~ msgid "gzipped"
-#~ msgstr "\"ge-gzipt\""
-
-#, fuzzy
-#~| msgid "\"bzipped\""
-#~ msgid "bzipped"
-#~ msgstr "\"ge-bzipt\""
-
-#, fuzzy
-#~| msgid "Add custom comment into header (\\n splits lines)"
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr "Voeg een commentaar toe in de header (\\n om regels af te breken"
-
-#~ msgid "and"
-#~ msgstr "en"
-
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "Uitgeschakeld"
-
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "Ingeschakeld"
-
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "Repareer"
-
-#~ msgid "Calendar"
-#~ msgstr "Kalender"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "MySQL&nbsp;4.0 compatibel"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr ""
-#~ "Standaard configuratiebestand kon niet worden geladen vanuit: \"%1$s\""
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "Creëer een index op kolommen&nbsp;%s&nbsp;"
-
-#, fuzzy
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "Maak tabel"
-
-#, fuzzy
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "Geen"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Schoon de tabel (\"FLUSH\")"
-
-#~ msgid "Invalid server index: \"%s\""
-#~ msgstr "Ongeldige serverindex: \"%s\""
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "Beschrijving"
-
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "Geen"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "Schema van de \"%s\" database - Pagina %s"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "De tabel \"%s\" bestaat niet!"
-
-#~ msgid ""
-#~ "This MySQL server works as %s in <b>replication</b> process. For further "
-#~ "information about replication status on the server, please visit the <a "
-#~ "href=\"#replication\">replication section</a>."
-#~ msgstr ""
-#~ "Deze MySQL-server functioneert als %s in een <b>replicatie</b> process. "
-#~ "Kijk voor meer informatie over replicatie in de <a href=\"#replication"
-#~ "\">replication status</a> sectie."
-
-#~ msgid "running on %s"
-#~ msgstr "wordt uitgevoerd op %s"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr "De schaalfactor is te klein om het schema op een pagina te zetten"
-
-#~ msgid ""
-#~ "Cannot start session without errors, please check errors given in your "
-#~ "PHP and/or webserver log file and configure your PHP installation "
-#~ "properly."
-#~ msgstr ""
-#~ "De sessie kan niet foutloos worden gestart. Controleer op foutmeldingen "
-#~ "in de PHP- en webserver-log, en herstel deze."
-
-#, fuzzy
-#~| msgid "Import currencies ($5.00 to 5.00)"
-#~ msgid "Import currencies (.00 to 5.00)"
-#~ msgstr "Valuta importeren ($5.00 naar 5.00)"
-
-#, fuzzy
-#~| msgid ""
-#~| "However on last run no data has been parsed, this usually means "
-#~| "phpMyAdmin won't be able to finish this import unless you increase php "
-#~| "time limits."
-#~ msgid ""
-#~ "However on last run no data has been parsed, this usually means "
-#~ "phpMyAdmin won"
-#~ msgstr ""
-#~ "Tijdens de laatste poging is er geen vooruitgang geboekt, meestal "
-#~ "betekend dit dat phpMyAdmin dit niet af kan maken tenzij de "
-#~ "tijdsrestricties van PHP worden versoepeld."
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt "None action"
-#~ msgid "None"
-#~ msgstr "Geen"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt ""
-#~ msgid "None"
-#~ msgstr "Geen"
-
-#, fuzzy
-#~| msgid "Grant all privileges on wildcard name (username\\_%)"
-#~ msgid "Grant all privileges on wildcard name (username_%)"
-#~ msgstr "Geef alle rechten op de wildcard naam (gebruikersnaam\\_%)"
-
-#, fuzzy
-#~| msgid "The \"%s\" table doesn't exist!"
-#~ msgid "The %s table doesn"
-#~ msgstr "De tabel \"%s\" bestaat niet!"
-
-#, fuzzy
-#~| msgid "Could not load default configuration from: \"%1$s\""
-#~ msgid "Could not load default configuration from: %1"
-#~ msgstr ""
-#~ "Standaard configuratiebestand kon niet worden geladen vanuit: \"%1$s\""
-
-#, fuzzy
-#~| msgid "Invalid hostname for server %1$s. Please review your configuration."
-#~ msgid "Invalid hostname for server %1. Please review your configuration."
-#~ msgstr "Ongeldige machinenaam voor server %1$s. Controleer uw configuratie."
-
-#, fuzzy
-#~| msgid "Error renaming table %1$s to %2$s"
-#~ msgid "Error renaming table %1 to %2"
-#~ msgstr "Fout bij het hernoemen van de tabel %1$s naar %2$s"
-
-#, fuzzy
-#~| msgid ""
-#~| "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~| "extension. Please check your PHP configuration."
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1@Documentation][em]%1[/em][/a] extension. "
-#~ "Please check your PHP configuration."
-#~ msgstr ""
-#~ "Kan de [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a]-extensie "
-#~ "niet laden. Controleer de PHP configuratie."
-
-#, fuzzy
-#~| msgid ""
-#~| "This server is not configured as master in a replication process. Would "
-#~| "you like to <a href=\"%s\">configure</a> it?"
-#~ msgid ""
-#~ "This server is not configured as master in a replication process. Would "
-#~ "you like to <a href=%s>configure</a> it?"
-#~ msgstr ""
-#~ "Deze server is niet ingesteld als master in een replicatie proces. Wilt u "
-#~ "dit nu <a href=\"%s\">instellen</a>?"
-
-#, fuzzy
-#~| msgid ""
-#~| "This server is not configured as slave in a replication process. Would "
-#~| "you like to <a href=\"%s\">configure</a> it?"
-#~ msgid ""
-#~ "This server is not configured as slave in a replication process. Would "
-#~ "you like to <a href=%s>configure</a> it?"
-#~ msgstr ""
-#~ "Deze server is niet ingesteld als slave in een replicatie proces. Wilt u "
-#~ "dit nu <a href=\"%s\">instellen</a>?"
-
-#, fuzzy
-#~| msgid "Could not connect to MySQL server"
-#~ msgid "(or the local MySQL server"
-#~ msgstr "Er kan geen verbinding worden gemaakt met de server"
-
-#, fuzzy
-#~| msgid ""
-#~| "There is a chance that you may have found a bug in the SQL parser. "
-#~| "Please examine your query closely, and check that the quotes are correct "
-#~| "and not mis-matched. Other possible failure causes may be that you are "
-#~| "uploading a file with binary outside of a quoted text area. You can also "
-#~| "try your query on the MySQL command line interface. The MySQL server "
-#~| "error output below, if there is any, may also help you in diagnosing the "
-#~| "problem. If you still have problems or if the parser fails where the "
-#~| "command line interface succeeds, please reduce your SQL query input to "
-#~| "the single query that causes problems, and submit a bug report with the "
-#~| "data chunk in the CUT section below:"
-#~ msgid ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "be . "
-#~ msgstr ""
-#~ "Er is een kans dat u een fout heeft aangetroffen in de SQL-parser. Let er "
-#~ "goed op, dat in de query op de correcte plaatsen quotes zijn geplaatst. "
-#~ "Een ander mogelijkheid voor deze foutmelding is dat u het ge-quote "
-#~ "tekstgedeelte in binaire mode heeft geplaatst. U kunt ook uw query "
-#~ "proberen in de command line van MySQL. De MySQL-serverfoutmelding "
-#~ "hieronder, mocht die aanwezig zijn, kan ook helpen met het opsporen van "
-#~ "fouten. Blijft u problemen houden of als de parser fouten geeft terwijl "
-#~ "het goed gaat in de command line van MySQL, probeer dan de SQL-query in "
-#~ "te korten en een bug report met het stukje data te sturen van het CUT "
-#~ "gedeelte hieronder:"
-
-#~ msgctxt "$strStrucCSV"
-#~ msgid "CSV"
-#~ msgstr "CSV gegevens"
-
-#~ msgid "Copy"
-#~ msgstr "Kopieer"
-
-#~ msgid "Delete the users and reload the privileges afterwards."
-#~ msgstr "Verwijder de gebruikers en vernieuw de privileges daarna."
-
-#~ msgid ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-#~ msgstr ""
-#~ "Dit is de nette manier, maar het vernieuwen van de privileges kan even "
-#~ "duren."
-
-#~ msgid "has been altered."
-#~ msgstr "is veranderd."
-
-#~ msgid "Microsoft Excel 2000"
-#~ msgstr "Microsoft Excel 2000"
-
-#~ msgid "Internet Explorer does not support this function."
-#~ msgstr "Internet Explorer ondersteurd deze functie niet."
-
-#~ msgid ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-#~ msgstr ""
-#~ "De &quot;verwijderde&quot; gebruikers zullen de server kunnen gebruiken, "
-#~ "zoals altijd, zolang de privileges nog niet zijn vernieuwd."
-
-#~ msgid "Just delete the users from the privilege tables."
-#~ msgstr "Verwijder gewoon de gebruikers van de privileges tabel."
-
-#~ msgid ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-#~ msgstr ""
-#~ "Maakt het mogelijk om opgeslagen procedures uit te voeren; Heeft geen "
-#~ "effect in deze MySQL versie."
-
-#~ msgid "Process list"
-#~ msgstr "Processenlijst"
-
-#~ msgid "Reload privileges"
-#~ msgstr "Ververs rechten"
-
-#~ msgid ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-#~ msgstr ""
-#~ "De gebruikers zullen nog steeds het USAGE (gebruik) privilege hebben "
-#~ "zolang de privileges nog niet zijn vernieuwd."
-
-#~ msgid "Native MS Excel format"
-#~ msgstr "Native MS Excel data"
-
-#~ msgid "Alter index(s)"
-#~ msgstr "Index(en) bijwerken"
-
-#~ msgid "Tracking Mechanism"
-#~ msgstr "Tracking-mechanisme"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT * query"
-#~ msgid "Select all"
-#~ msgstr "Selecteer alles"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT ... query"
-#~ msgid "Select"
-#~ msgstr "Selecteer alles"
-
-#, fuzzy
-#~| msgid "Insert"
-#~ msgctxt "Create INSERT query"
-#~ msgid "Insert"
-#~ msgstr "Invoegen"
-
-#, fuzzy
-#~| msgid "Updated"
-#~ msgctxt "Create UPDATE query"
-#~ msgid "Update"
-#~ msgstr "Bijgewerkt"
-
-#, fuzzy
-#~| msgid "Delete"
-#~ msgctxt "Create DELETE query"
-#~ msgid "Delete"
-#~ msgstr "Verwijderen"
-
-#~ msgid "%1$d row(s) affected."
-#~ msgstr "%1$d rij(en) bijgewerkt."
-
-#~ msgid "utf-8"
-#~ msgstr "utf-8"
-
-#~ msgid "Jan0"
-#~ msgstr "Jan0"
-
-#~ msgid "Jan1"
-#~ msgstr "Jan1"
-
-#~ msgid "Jan2"
-#~ msgstr "Jan2"
-
-#~ msgid ""
-#~ "Structure Difference' ;\n"
-#~ "$strStructureForView = 'Structure for view"
-#~ msgstr "Structuur verschillen"
