Translation update done using Pootle.

--- a/po/nl.po
+++ b/po/nl.po
@@ -1113,7 +1113,7 @@ msgstr "Augustus"
 
 #: js/messages.php:90
 msgid "September"
-msgstr ""
+msgstr "September"
 
 #: js/messages.php:91
 #, fuzzy
