Translation update done using Pootle.

--- a/po/nl.po
+++ b/po/nl.po
@@ -1116,10 +1116,9 @@ msgid "September"
 msgstr "September"
 
 #: js/messages.php:91
-#, fuzzy
 #| msgid "Oct"
 msgid "October"
-msgstr "Oct"
+msgstr "Oktober"
 
 #: js/messages.php:92
 msgid "November"
