Translation update done using Pootle.

--- a/po/nl.po
+++ b/po/nl.po
@@ -1122,7 +1122,7 @@ msgstr "Oktober"
 
 #: js/messages.php:92
 msgid "November"
-msgstr ""
+msgstr "November"
 
 #: js/messages.php:93
 msgid "December"
