--- a/po/nl.po
+++ b/po/nl.po
@@ -1126,7 +1126,7 @@ msgstr "November"
 
 #: js/messages.php:93
 msgid "December"
-msgstr ""
+msgstr "December"
 
 #. l10n: Short month name
 #: js/messages.php:97 libraries/common.lib.php:1555
