Translation update done using Pootle.

--- a/po/nl.po
+++ b/po/nl.po
@@ -1208,7 +1208,7 @@ msgstr "Dinsdag"
 
 #: js/messages.php:125
 msgid "Wednesday"
-msgstr ""
+msgstr "Woensdag"
 
 #: js/messages.php:126
 msgid "Thursday"
