--- a/po/nl.po
+++ b/po/nl.po
@@ -1307,10 +1307,9 @@ msgstr "Za"
 
 #. l10n: Column header for week of the year in calendar
 #: js/messages.php:162
-#, fuzzy
 #| msgid "Wiki"
 msgid "Wk"
-msgstr "Wiki"
+msgstr "Week"
 
 #: js/messages.php:164
 msgid "Hour"
