--- a/po/nl.po
+++ b/po/nl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-31 00:33+0200\n"
+"PO-Revision-Date: 2010-05-31 00:34+0200\n"
 "Last-Translator: Bjorn <inbox@bjornroesbeke.be>\n"
 "Language-Team: dutch <nl@li.org>\n"
 "Language: nl\n"
@@ -3052,9 +3052,8 @@ msgid "Open new phpMyAdmin window"
 msgstr "Open nieuw phpMyAdmin scherm"
 
 #: libraries/header.inc.php:115
-#, fuzzy
 msgid "New table"
-msgstr "Geen Tabellen"
+msgstr "Nieuwe tabel"
 
 #: libraries/header_printview.inc.php:50 libraries/header_printview.inc.php:55
 msgid "SQL result"
