--- a/po/nl.po
+++ b/po/nl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-31 00:35+0200\n"
+"PO-Revision-Date: 2010-05-31 00:36+0200\n"
 "Last-Translator: Bjorn <inbox@bjornroesbeke.be>\n"
 "Language-Team: dutch <nl@li.org>\n"
 "Language: nl\n"
@@ -4367,7 +4367,7 @@ msgstr "SQL-geschiedenis"
 
 #: libraries/relation.lib.php:159
 msgid "Quick steps to setup advanced features:"
-msgstr ""
+msgstr "Snelle stappen om geavanceerde functies in te stellen:"
 
 #: libraries/relation.lib.php:161
 msgid ""
