Translation update done using Pootle.

--- a/po/nl.po
+++ b/po/nl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-31 00:36+0200\n"
+"PO-Revision-Date: 2010-05-31 00:37+0200\n"
 "Last-Translator: Bjorn <inbox@bjornroesbeke.be>\n"
 "Language-Team: dutch <nl@li.org>\n"
 "Language: nl\n"
@@ -4373,6 +4373,7 @@ msgstr "Snelle stappen om geavanceerde functies in te stellen:"
 msgid ""
 "Create the needed tables with the <code>script/create_tables.sql</code>."
 msgstr ""
+"Maak de benodigde tabellen aan met <code>script/create_tables.sql</code>."
 
 #: libraries/relation.lib.php:162
 msgid "Create a pma user and give access to these tables."
