--- a/po/nl.po
+++ b/po/nl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-31 00:38+0200\n"
+"PO-Revision-Date: 2010-05-31 00:40+0200\n"
 "Last-Translator: Bjorn <inbox@bjornroesbeke.be>\n"
 "Language-Team: dutch <nl@li.org>\n"
 "Language: nl\n"
@@ -4385,6 +4385,9 @@ msgid ""
 "Enable advanced features in configuration file (<code>config.inc.php</"
 "code>), for example by starting from <code>config.sample.inc.php</code>."
 msgstr ""
+"Schakel geavanceerde functionaliteit in het configuratiebestand "
+"(<code>config.inc.php</code>) in, bijvoorbeeld door gebruik te maken van "
+"<code>config.sample.inc.php</code>."
 
 #: libraries/relation.lib.php:164
 msgid "Re-login to phpMyAdmin to load the updated configuration file."
