Translation update done using Pootle.

--- a/po/nl.po
+++ b/po/nl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-31 00:42+0200\n"
+"PO-Revision-Date: 2010-05-31 00:44+0200\n"
 "Last-Translator: Bjorn <inbox@bjornroesbeke.be>\n"
 "Language-Team: dutch <nl@li.org>\n"
 "Language: nl\n"
@@ -5052,6 +5052,10 @@ msgid ""
 "functionality will be missing. For example navigation frame will not refresh "
 "automatically."
 msgstr ""
+"Javascript wordt niet door uw browser ondersteund of de ondersteuning ervoor "
+"is uitgeschakeld. Bepaalde functionaliteit van phpMyAdmin zal niet "
+"beschikbaar zijn. Zo zal bijvoorbeeld het navigatievenster zich niet "
+"automatisch vernieuwen."
 
 #: main.php:346
 #, php-format
