--- a/po/nl.po
+++ b/po/nl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-31 00:50+0200\n"
+"PO-Revision-Date: 2010-05-31 00:53+0200\n"
 "Last-Translator: Bjorn <inbox@bjornroesbeke.be>\n"
 "Language-Team: dutch <nl@li.org>\n"
 "Language: nl\n"
@@ -5932,8 +5932,9 @@ msgstr "Deze server is ingesteld als master in een replicatie proces."
 msgid "This MySQL server works as <b>slave</b> in <b>replication</b> process."
 msgstr "Deze server is ingesteld als master in een replicatie proces."
 
+# Er moet een betere vertaling voor "replication" zijn. "Nadoen"?
+# "Deze MySQL-server functioneert als %s in een <b>replicatie</b> proces." weggehaald.
 #: server_status.php:366
-#, fuzzy
 #| msgid ""
 #| "This MySQL server works as %s in <b>replication</b> process. For further "
 #| "information about replication status on the server, please visit the <a "
@@ -5942,9 +5943,8 @@ msgid ""
 "For further information about replication status on the server, please visit "
 "the <a href=#replication>replication section</a>."
 msgstr ""
-"Deze MySQL-server functioneert als %s in een <b>replicatie</b> process. Kijk "
-"voor meer informatie over replicatie in de <a href=\"#replication"
-"\">replication status</a> sectie."
+"Kijk voor meer informatie over de replicatiestatus op deze server in de <a "
+"href=\"#replication\">replicatiestatus</a> sectie."
 
 #: server_status.php:383
 msgid ""
